# OpenGLFun

./: CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cpp  shader.cpp  shader.h
src/shaders/: fragment.glsl  vertex.glsl
